--- a/SistemaBodega/appsettings.json
+++ b/SistemaBodega/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SistemaBodega-5961c850-0736-45db-8fa2-22e1832b90e5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SistemaBodega-5961c850-0736-45db-8fa2-22e1832b90e5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=SistemaBodegaBD;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
